# ovos-shell

./: CMakeLists.txt
lib/: configuration.cpp  placesmodel.cpp
theme-legacy/: CMakeLists.txt  ovostheme.cpp  ovostheme.h
